# financial-analysis-agent

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
notebooks/: book_analysis.py  data-analysis.py  forecasting.py
src/: main.py
src/data_analysis/: data_retrieval_tool.py  financial_data_topics.py
src/forecasting/: feature_engineering.py  features.py  forecasting_tool.py
tests/data_analysis/: test_data_retrieval_tool.py
tests/forecasting/: test_feature_engineering.py  test_forecasting_tool.py
