[project]
name = "financial-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "langchain-tests>=0.3.20",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.0",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [{ include = "forecasting", from = "src" }]
